--- a/style/styles.css
+++ b/style/styles.css
@@ -7,6 +7,27 @@ h1 {
     text-align: center;
 }
 
-.bodycolor {
+.cardimgstyle {
+    max-height: 100%;
+    max-width: 100%;
+    vertical-align: middle;
+}
+
+.cardbodystyle {
     background-color: black;
+}
+
+.cardtitlestyle {
+    color: white;
+    text-align: center;
+}
+
+.cardtextstyle {
+    color: white;
+    text-align: center;
+}
+
+.cardbtnstyle {
+    display: flex;
+    justify-content: center;
 }
