--- a/style/styles.css
+++ b/style/styles.css
@@ -2,24 +2,13 @@ body {
     background-image: url(../assets/backgroundimage.jpg);
     background-size: cover;
 }
+
 @font-face {
     font-family: irish;
     src: url(../assets/IrishGrover-Regular.ttf);
 }
-h1{
-    font-family: irish;
-    font-size: 95px;
-    background-color: black;
-    color:white;
-    margin-top: 200px;
-    margin-left: 250px;
-    margin-right: 250px;
-    text-align: center;
-}
 
-
-
-h2{
+h1 {
     font-size: 80px;
     background-color: black;
     color: white;
@@ -28,107 +17,238 @@ h2{
     margin-bottom: 80px;
     margin-left: 200px;
     margin-right: 200px;
+    margin-top: 1em;
     justify-content: center;
     font-family: irish;
 }
 
+h2 {
+    font-size: 80px;
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 80px;
+    margin-left: 450px;
+    margin-right: 200px;
+    margin-top: 1em;
+    justify-content: center;
+    font-family: irish;
+    width: 60rem;
+    height: 6rem;
+}
 
-    
+.waqasbtn {
+    margin-right: 1em;
+    font-size: 45px;
+    background-color: black;
+    display: block;
+    width: 100%;
+    text-decoration: none;
+    border: none;
+    margin-top: 5em;
+}
 
-.cardbodystyle{
+.akbtn {
+    margin-right: 1em;
+    font-size: 45px;
+    background-color: black;
+    display: block;
+    width: 100%;
+    text-decoration: none;
+    border: none;
+}
+
+.firstpgmoviebtntxt {
+    text-decoration: none;
+}
+.firstpgshowbtntxt {
+    text-decoration: none;
+    margin-top: 1em;
+}
+
+.cardstyle {
+    border: black;
+}
+
+
+.cardbodystyle {
     background-color: black;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+
 
 }
-.cardtitlestyle{
+
+.cardtitlestyle {
     color: white;
     text-align: center;
-    
+
 
 }
-.cardtextstyle{
-    color:white;
+
+.cardtextstyle {
+    color: white;
     text-align: center;
 }
-.GOTBtn{
-    margin-top:46px ;
+.cardimgstyle {
+    height: 200px;
 }
-.RMBtn{
+.num1img {
+    height: 200px;
+}
+.num2img {
+    height: 200px;
+}
+.num3img {
+    height: 200px;
+}
+.num4img {
+    height: 200px;
+}
+.num5img {
+    height: 200px;
+}
+.num6img {
+    height: 200px;
+}
+
+.num7img {
+    height: 200px;
+}
+.num8img {
+    height: 200px;
+}
+.num9img {
+    height: 200px;
+}
+.num10img {
+    height: 200px;
+}
+.num9txt {
+    margin-bottom: 2em;
+    position: absolute;
+    bottom: 85px;
+
+}
+.num9title {
+    margin-bottom: 2.3em;
+    position: absolute;
+    bottom: 200px;
+    margin-left: 50px;
+    
+}
+.num10txt {
+    margin-bottom: 6em;
+    position: absolute;
+    bottom: 20px;
+}
+.num10title {
+    margin-bottom: 9.5em;
+}
+.num1body {
+    height: 15.5em;
+}
+.num2body {
+    height: 15.5em;
+}
+.num3body {
+    height: 15.5em;
+}
+
+.num4body {
+    height: 15.5em;
+}
+.num5body {
+    height: 15.5em;
+}
+.num1btn {
+    margin-top: -1em;
+}
+.num2btn {
+    margin-top: .5em;
+}
+.num3btn {
+    margin-top: .6em;
+}
+
+.num4btn {
+    margin-top: -.9em;
+}
+
+.num5btn {
+    margin-top: .5em;
+}
+
+.num9btn {
+    margin-top: 13.5em;
+}
+
+.firstrowstyle {
+    margin-top: 6em;
+    margin-left: 3em;
+}
+
+.secondrowstyle {
+
+    padding-bottom: 4em;
+    margin-left: 3em;
+    margin-top: 4em;
+    margin-bottom: 10em;
+
+}
+
+.GOTBtn {
+    margin-top: 46px;
+}
+
+.RMBtn {
     margin-top: 80px;
 }
-.OBtn{
+
+.OBtn {
     margin-top: 35px;
 }
-.GVBtn{
+
+.GVBtn {
     margin-top: 48px;
 }
-.FBtn{
+
+.FBtn {
     margin-top: 24px;
 }
-.NBtn{
+
+.NBtn {
     margin-top: 16px;
 }
-.LBtn{
+
+.LBtn {
     margin-top: 43px;
 }
-.secondRow{
+
+.secondRow {
     margin-left: 45px;
 }
-.firstRow{
+
+.firstRow {
     margin-left: 45px;
 }
-.mainmenu{
+
+.pg2mainmenu {
     margin-left: 830px;
     font-size: 45px;
     background-color: black;
+    margin-bottom: 2em;
+    margin-top: -3em;
+    border: none;
 }
-.IBtn{
-    margin-top: 72px;
-}
-.WMBtn{
-    margin-top: 67px;
-}
-.FFBtn{
-    margin-top: 24px;
-}
-.TDBtn{
-    margin-top: 65px;
-}
-.GBtn{
-    margin-top: 54px;
-}
-.SBtn{
-    margin-top: 51px;
-}
-.TRBtn{
-    margin-top: 95px;
-}
-.TBtn{
-    margin-top: 60px;
-}
-.Titlebtn{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 350px;
-    margin-right: 350px;
-    margin-top: 100px;
-}
-.Akbtn{
-    color: white;
-    background-color: black;
-    font-size: 75px;
-    font-family: irish;
-    
 
-}
-.Wbtn{
-    color: white;
+.pg3mainmenu {
+    margin-left: 830px;
+    font-size: 45px;
     background-color: black;
-    font-size: 75px;
-    font-family: irish;
-
+    margin-bottom: 2em;
+    margin-top: 1em;
+    border: none;
 }
